# JIT-2.0

./: .gitignore  QNA.md  README.md  data_analysis_eda.html  data_analysis_eda.ipynb  index.html  jit_demand_prediction.html  jit_demand_prediction.ipynb  micro_expiry_analysis.html  micro_expiry_analysis.ipynb  multi_run_results_for_peer_review.md  paper_additions.md  pyproject.toml  reproduce_paper_results.py  statistical_validation.html  statistical_validation.ipynb
api/: main.py
data_generation/: generate_platelet_data.py  platelet_demand_all_scenarios.csv  platelet_demand_hamilton_medium_hospital.csv  platelet_demand_stanford_large_hospital.csv  plot_data.py  plot_monthly_enhanced.py  verify_data.py
models/: demand_predictor.py
models/trained_models/: model_results.csv  predictions.csv  xgboost_model.pkl
outputs/: daily_jit_micro.csv  daily_jit_only.csv  daily_traditional.csv  generate_half_year_viz.py  generate_micro_expiry_viz.py  generate_multi_year_viz.py  generate_paper_figures.py  generate_plotly_viz.py  generate_plotly_viz_v2.py  generate_savings_viz.py  simulation_metrics.csv
simulation/: inventory_sim.py  statistical_analysis.py
